fix input width on mobile

--- a/styles.css
+++ b/styles.css
@@ -118,10 +118,13 @@ p {
     align-items: center;
   }
 
+  .input-container {
+    width: 100%;
+  }
+
   #city-input {
     background-color: rgba(255, 255, 255, 0.435);
-
-    width: 300px;
+    width: 100%;
   }
   .weather-info {
     margin-top: 20px;
